(lang dune 3.14)

(name ocsigen-dune-rules)

(cram enable)

(generate_opam_files true)

(authors "Jules Aguillon <jules@j3s.fr>")

(maintainers "Jules Aguillon <jules@j3s.fr>")

(license MIT)

(package
 (name ocsigen-dune-rules)
 (synopsis
  "Generate Dune rules for building a client/server application or library.")
 (depends ocaml cmdliner ocsigen-ppx-rpc eliom))
