(env
 (_
  (flags
   (:standard -w +A@3-4@5..15-9@20..68-37-39-44-48-69-34))))

(library
 (public_name ocsigen-start.server)
 (name ocsigen_start)
 (modes byte native)
 (wrapped (module_name Os))
 (preprocess
  (pps eliom.ppx.server js_of_ocaml-ppx_deriving_json ocsigen-ppx-rpc -- --rpc-internal))
 (flags
  (:standard
   (:include type_includes)))
 (libraries
  eliom.server
  calendar
  safepass
  ocsigen-toolkit.server
  yojson
  re.str
  cohttp-lwt-unix
  pgocaml
  resource-pooling))

(subdir
 client
 (library
  (public_name ocsigen-start.client)
  (name ocsigen_start)
  (modes byte)
  (wrapped (module_name Os))
  (preprocess
   (pps js_of_ocaml-ppx js_of_ocaml-ppx_deriving_json))
  (libraries eliom.client calendar ocsigen-toolkit.client re.str js_of_ocaml))
 (dynamic_include ../dune.client))

(rule
 (target type_includes)
 (deps (universe))
 (action
  (with-stdout-to
   %{target}
   (system "printf '('; ocamlfind query -i-format js_of_ocaml; printf ')'"))))

(rule
 (deps
  (glob_files *.eliom)
  (glob_files *.eliomi))
 (action
  (with-stdout-to
   dune.client
   (run ocsigen-dune-rules --internal-prefix Os .))))
